Mega update: CafePromenade fork with broad version support, Docker web console, and major enhancements
- Support for Minecraft versions 1.8 through 26.1 (added Chunk_1_8, Chunk_26_1 handlers)
- Fix for 1.20.2+ "Connection Lost - Loading NBT data" error
- Docker + web management console (Python/Flask web UI with live logs, auth, world export)
- Dockerfile, docker-compose.yml, .dockerignore for containerized deployment
- ContainerAutoOpener: automatically open containers to capture loot tables
- PlayerInventory tracking: record player inventory contents
- Enhanced protocol version database (protocol-versions.json massively expanded)
- Improved Microsoft authentication flow (MicrosoftAuthHandler, MicrosoftAuthServer)
- EncryptionManager enhancements for proxy security
- GUI improvements: RightClickMenu, chunk overview map
- Config: added new options for container scanning, web console, access tokens
- WorldManager: extended chunk processing and entity handling
- ChunkFactory: version routing for new chunk formats
- ChunkEntities, RegistryLoader, BlockEntityRegistry: expanded registry support
- NbtUtil, DataTypeProvider_1_20_6: NBT and data type improvements
- Packet handlers: added 1.14 and 1.17 version-specific handlers
- Desktop WPF launcher application (desktop/)
- NSIS Windows installer (installer/)
- Wiki documentation: Installation, Docker, Auth, Supported Versions, FAQ
- Python inspection/scanning tools for region files, entities, containers
- Launcher submodule (Go-based world-downloader-launcher)
- Maven distribution management for GitHub Packages
- Bumped version to 2.3, updated all links from mircokroon to CafePromenade
- Tests: Chunk_1_8Test, expanded ChunkTest